--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Kansas City</title>
-		<!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+		<title>Kansas City</title> -->
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
         <h1>Chart Visualizations for Kansas City</h1>
@@ -13,6 +13,9 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 		<script src="https://d3js.org/d3.v5.min.js"></script>
+		<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+		<!-- <script src="https://d3js.org/d3.v4.js"></script> -->
+		<!-- <script src="d3-tip.js"></script> -->
 		<script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
