--- a/NFL Plotly Examples/playersstats.html
+++ b/NFL Plotly Examples/playersstats.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Chiefs Pass vs Rush</title>
+    <title>Chiefs Player's Yards Per Week</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
@@ -13,12 +13,15 @@
     <div id="plot"></div>
 
     <!-- Selector for switching Barmodes -->
-    <select id="selOption">
-        <option value="stack">Stacked</option>
-        <option value="group">Grouped</option>
-    </select>
+    <!-- <select id="selOption">
+        <option value="Kelce">Travis Kelce, TE</option>
+        <option value="Hill">Tyreek Hill, WR</option>
+        <option value="Darrel">Darrel Williams, RB</option>
+        <option value="Damien">Damien Williams, RB</option>
+        <option value="McCoy">LeSean McCoy, RB</option>
+    </select> -->
 
     <!-- Sourcing Plots JS file -->
-    <script src="plots.js"></script>
+    <script src="plots4.js"></script>
 </body>
 </html>
