--- a/NFL Plotly Examples/wins2.html
+++ b/NFL Plotly Examples/wins2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Chiefs Yards vs Win/Loss + Points Scored</title>
+    <title>Chiefs Yards vs Win/Loss</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
@@ -13,6 +13,6 @@
     <div id="plot"></div>
 
     <!-- Sourcing Plots JS file -->
-    <script src="plots2.js"></script>
+    <script src="plots3.js"></script>
 </body>
 </html>
