--- a/NFL Plotly Examples/playersstats.html
+++ b/NFL Plotly Examples/playersstats.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Div for Plotly Plot -->
-    <div id="plot"></div>
+    <div id="plot4"></div>
 
     <!-- Selector for switching Barmodes -->
     <!-- <select id="selOption">
