--- a/NFL Plotly Examples/wins.html
+++ b/NFL Plotly Examples/wins.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Div for Plotly Plot -->
-    <div id="plot"></div>
+    <div id="plot2"></div>
 
     <!-- Sourcing Plots JS file -->
     <script src="plots2.js"></script>
