--- a/NFL Plotly Examples/wins2.html
+++ b/NFL Plotly Examples/wins2.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Chiefs Yards vs Win/Loss</title>
+    <title>Chiefs Rush/Total Yards vs Win/Loss</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 <body>
     <!-- Div for Plotly Plot -->
-    <div id="plot"></div>
+    <div id="plot3"></div>
 
     <!-- Sourcing Plots JS file -->
     <script src="plots3.js"></script>
